# pytastic

./: 404.html  LICENSE  README.md  benchmark.py  changelog.md  debug.py  example.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: advanced.md  index.md  json_schema.md  syntax.md
json_schema/: index.html
pytastic/: __init__.py  codegen.py  compiler.py  core.py  exceptions.py  schema.py  utils.py  validators.py
search/: search_index.json
site/: sitemap.xml
site/advanced/: index.html
site/search/: search_index.json
syntax/: index.html
tests/: test_advanced_syntax.py  test_complex_schemas.py  test_docs.py  test_partial.py  test_schema.py  test_schema_gaps.py  test_strip.py  test_validation.py
