[tool.poetry]
name = "pytastic"
version = "0.1.4"
description = "A dependency-free JSON validation library using TypedDict and Annotated"
authors = ["Tersoo <tersoo@example.com>"]
readme = "README.md"
repository = "https://github.com/rayattack/pytastic"
packages = [{include = "pytastic"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
